--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.0",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -18,8 +19,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@tinymce/tinymce-angular": "^8.0.1",
     "idb": "^8.0.0",
     "rxjs": "~7.8.0",
+    "tinymce": "^7.3.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
