--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "^17.3.0",
     "@tinymce/tinymce-angular": "^8.0.1",
     "idb": "^8.0.0",
-    "ngx-sharebuttons": "^4.0.0",
+    "jspdf": "^2.5.2",
     "rxjs": "~7.8.0",
     "tinymce": "^7.3.0",
     "tslib": "^2.3.0",
