--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@tinymce/tinymce-angular": "^8.0.1",
+    "emoji-mart": "^5.6.0",
     "idb": "^8.0.0",
     "jspdf": "^2.5.2",
     "rxjs": "~7.8.0",
